fix too much deletion

--- a/_sass/bootcamp-security/main.scss
+++ b/_sass/bootcamp-security/main.scss
@@ -2758,6 +2758,12 @@ nav#menu span.fa.fa-bars:hover {
   position: relative;
 }
 
+#counter {
+  background-image: url(../img/about/testimonial-bg.png);
+  background-size: cover;
+  padding: 60px 0;
+}
+
 .count-one {
   text-align: center;
   margin-top: 80px;
